--- a/authms/src/main/resources/application.properties
+++ b/authms/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 spring.application.name=authms
+
+jwt.secret=${JWT_SECRET:DefaultSecretKey}
+
+spring.datasource.url=jdbc:postgresql://${POSTGRESQL_DB_HOST}/shopgi
+spring.datasource.username=${POSTGRESQL_DB_USER}
+spring.datasource.password=${POSTGRESQL_DB_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.flyway.enabled=true
+spring.flyway.baseline-on-migrate=true
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+spring.jpa.show-sql=true
+spring.jpa.format-sql=true
