--- a/authms/src/main/resources/application.properties
+++ b/authms/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=authms
 
-jwt.secret=${JWT_SECRET:DefaultSecretKey}
+api.jwt.token.secret=${JWT_SECRET:1235678}
 
 spring.datasource.url=jdbc:postgresql://${POSTGRESQL_DB_HOST}/shopgi
 spring.datasource.username=${POSTGRESQL_DB_USER}
