--- a/authms/src/main/resources/application.properties
+++ b/authms/src/main/resources/application.properties
@@ -15,3 +15,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.show-sql=true
 spring.jpa.format-sql=true
+
+management.endpoints.web.exposure.include=health,info,env,auditevents
+management.endpoints.web.base-path=/actuator
+management.endpoint.health.show-details=always
