--- a/authms/src/main/resources/application.properties
+++ b/authms/src/main/resources/application.properties
@@ -13,8 +13,8 @@ spring.flyway.baseline-on-migrate=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-spring.jpa.show-sql=true
-spring.jpa.format-sql=true
+#spring.jpa.show-sql=true
+#spring.jpa.format-sql=true
 
 management.endpoints.web.exposure.include=health,info,env,auditevents
 management.endpoints.web.base-path=/actuator
